--- a/qLearning.ipynb
+++ b/qLearning.ipynb
@@ -9,11 +9,11 @@
     "Modelos de Markov são **modelos estocásticos** usados para modelar sistemas pseudo-randômicos. \n",
     "Presume que os futuros estados só dependem do estado atual, não de eventos que o precederam (isso é a propriedade de Markov).\n",
     "\n",
-    "Existem dois tipos de sistemas dentros desses modelos de Markov, modelos autonomos (onde a transição de um estado para o outro acontece ocasionalmente sem controle) e controlados onde podemos dizer que existe um **agente**.\n",
+    "Existem dois tipos de sistemas dentros desses modelos de Markov, modelos autonomos (onde a transição de um estado para o outro acontece ocasionalmente sem controle), e controlados onde podemos dizer que existe um **agente**.\n",
     "\n",
     "\n",
     "\n",
-    "Dentro dessa categoria, os modelos de Markov se encaixam como Modelos de Decisão de Markov, que é definida pela quadrupla:\n",
+    "Dentro dessa categoria, os modelos de Markov se encaixam como Modelos de Decisão de Markov, que é definida pela quintupla:\n",
     "\n",
     "$$ M = \\{S, A, t, r, \\gamma\\}$$\n",
     "onde:\n",
@@ -97,15 +97,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Referências\n",
+    "\n",
+    "Youtube: CodeEmperium\n",
+    "Youtube: Steve Bruton\n",
+    "Site: Geeks for Geeks\n",
+    "Books: Reinforcement Learning for Finance\n",
+    "LLM: DeepSeek"
+   ]
   }
  ],
  "metadata": {
