--- a/qLearning.ipynb
+++ b/qLearning.ipynb
@@ -102,11 +102,11 @@
    "source": [
     "# Referências\n",
     "\n",
-    "Youtube: CodeEmperium\n",
-    "Youtube: Steve Bruton\n",
-    "Site: Geeks for Geeks\n",
-    "Books: Reinforcement Learning for Finance\n",
-    "LLM: DeepSeek"
+    "- Youtube: CodeEmperium\n",
+    "- Youtube: Steve Bruton\n",
+    "- Site: Geeks for Geeks\n",
+    "- Books: Reinforcement Learning for Finance\n",
+    "- LLM: DeepSeek"
    ]
   }
  ],
